--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
   "author": "An",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "@react-native-firebase/messaging": "^18.4.0",
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-sanitizer": "^1.0.6",
+    "firebase-admin": "^11.10.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.7.2",
+    "mongoose": "^7.5.3",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "node-schedule": "^2.1.1",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.6.1"
+    "paypal-rest-sdk": "^1.8.1",
+    "socket.io": "^4.6.1",
+    "unidecode": "^0.1.8"
   }
 }
